# CPTS122_Hangman

./: CMakeLists.txt  README.md  SMLFProjectpa9.sln
SMLFProjectpa9/: BodyPart.cpp  BodyPart.hpp  Easy.txt  Famous_People.txt  Game.cpp  Game.hpp  Hangman.cpp  Hangman.hpp  HangmanParts.psd  Hard.txt  Head.cpp  Head.hpp  LeftArm.cpp  LeftArm.hpp  LeftLeg.cpp  LeftLeg.hpp  Letter.cpp  Letter.hpp  Medium.txt  PA9.cpp  PA9.hpp  Places.txt  RightArm.cpp  RightArm.hpp  RightLeg.cpp  RightLeg.hpp  SMLFProjectpa9.vcxproj  SMLFProjectpa9.vcxproj.filters  TestCases.cpp  TestCases.hpp  Torso.cpp  Torso.hpp  Word_Bank.cpp  Word_Bank.h  main.cpp  readme.txt
SMLFProjectpa9/x64/Debug/: SMLFProjectpa9.exe.recipe  SMLFProjectpa9.ilk  vc143.idb
SMLFProjectpa9/x64/Debug/SMLFProjectpa9.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SMLFProjectpa9.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
